Fix that keyboard focus outlines were hidden under toolbar

--- a/app/assets/stylesheets/books.css
+++ b/app/assets/stylesheets/books.css
@@ -37,9 +37,9 @@
 }
 
 .book__toolbar {
-  inset-block-start: var(--block-space);
-  outline: var(--block-space) solid var(--color-bg);
-  padding: var(--hover-size);
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  inset-block-start: 0;
   position: sticky;
   z-index: 1;
 }
